package com.crm.Tiefling.DTO;

import lombok.Data;

@Data
public class RoomDTO {
    private final Long id;
    private final String name;
}
