package com.crm.Tiefling;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class TieflingApplication {

	public static void main(String[] args) {
		SpringApplication.run(TieflingApplication.class, args);
	}

}
