@startuml
'https://plantuml.com/class-diagram

class TieflingApplication

class RoomController{
    roomService: RoomService
}
class Booking
class Room{
    id: Long
    title: String
}

class UserController{
    userService: UserService
    userDTO: UserDTO
}
class User{
    login: String
    password: String
    id: Long
}
class UserDTO{
    login: String
    password: String
}
class Authority{
    id: Long
    authority: string
}

UserController <... UserDTO
User <-- UserDTO

RoomController <-- Room

User *- Authority : have >
Booking - User : id >
Booking - Room : id >

@enduml